--- a/site/exp/react/list/index.html
+++ b/site/exp/react/list/index.html
@@ -50,16 +50,19 @@
 <body>
 <div id="app"></div>
 <script type="text/babel">
+    let lastList = new Array(10).fill(1).map((item, index) => makeItem(index));
+
+
     let {useState, useEffect, useCallback, useRef, memo} = React;
 
     let modes = ['random', 'default(index)', 'id'];
 
     const Child = memo(props => {
-            let [count, setCount] = useState(0)
-            useEffect(() => {
-                setCount(count => count + 1)
-            }, [props])
-            useEffect(() => {
+        let [count, setCount] = useState(0)
+        useEffect(() => {
+            setCount(count => count + 1)
+        }, [props])
+        useEffect(() => {
                 sleep(10);
             }, [])
             return <div className="child">
@@ -77,7 +80,7 @@
         if (!originArray.length) {
             return new Array(10).fill(1).map((item, index) => makeItem(index))
         } else {
-            return originArray.map((item, index) => (Math.random() < 0.5 ? makeItem(Math.random()) : makeItem(item.id)))
+            return lastList.slice(0, 8 + Math.round(Math.random() * 2))
         }
     }
 
