--- a/site/exp/react/memo/shouldComponentUpdate.html
+++ b/site/exp/react/memo/shouldComponentUpdate.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React Memo</title>
+    <title>shouldComponentUpdate</title>
     <script src="../fiber/react.development.js"></script>
     <script src="../fiber/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
